--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -11,7 +11,7 @@
                         {% if current_user_companies %}
                         {% for company in current_user_companies %}
                         <li><button type="button"
-                                class="btn btn-secondary  pl pr w-50 mt-2 mb-2">{{company.company_name}}
+                                class="btn btn-secondary  pl pr w-50 mt-2 mb-2">{{company.name}}
                             </button></li>
                         {% endfor %}
                         {% endif %}
