--- a/templates/admin/expenses.html
+++ b/templates/admin/expenses.html
@@ -1,3 +1,4 @@
+
 {% block content %}
 <style>
     /* styles.css */
@@ -91,7 +92,7 @@
 </style>
 
 {% csrf_token %}
-<!-- {% include './company_profile.html' %} -->
+{% include './company_profile.html' %}
 
 <div class="main-content">
     <div class="container mt-2">
