--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -92,12 +92,12 @@
                 <h4 class="mb-4 text-center"><strong>Founder Details</strong></h4>
                 <div class="card p-4">
                     <div class="mb-3 mt-3">
-                        <label for="founder_name"><strong>First Name</strong></label>
-                        <input type="text" class="form-control" name="founder_name" required>
+                        <label for="founder_fname"><strong>First Name</strong></label>
+                        <input type="text" class="form-control" name="founder_fname" required>
                     </div>
                     <div class="mb-3 mt-3">
-                        <label for="founder_name"><strong>Last Name</strong></label>
-                        <input type="text" class="form-control" name="founder_name" required>
+                        <label for="founder_lname"><strong>Last Name</strong></label>
+                        <input type="text" class="form-control" name="founder_lname" required>
                     </div>
                     <div class="mb-3 mt-3">
                         <label for="founder_email"><strong>Email</strong></label>
