--- a/templates/admin/company_profile.html
+++ b/templates/admin/company_profile.html
@@ -123,50 +123,53 @@
 
         {%else%}
         <div class="sidebar">
-            <h2>Features</h2>
-            <a class="dropdown-btn" href="#">PROFILE</a>
-            <!-- <a class="dropdown-btn" href="#">PROFILE<span class="edit-icon">&nbsp;&#9998;</span></a> -->
-        
-            <div class="dropdown-container">
+            <h2 id="myCompanyName"></h2>
+            <a class="dropdown-btn" href="#">Profile</a>
+            
+            <!-- <div class="dropdown-container">
                 <a href="{% url 'comprehensive_profile' company_profile.company_id %}" data-info="{{ company_profile.excecutive_summary }}">Executive summary</a>
                 <a href="{% url 'comprehensive_profile' company_profile.company_id %}" data-info="Industry: {{ company_profile.type_of_industry }}<br>No. of Employees: {{ company_profile.no_of_employees }}">Business Profile</a>
                 <a href="{% url 'comprehensive_profile' company_profile.company_id %}" data-info="{{ company_profile.technology_profile }}">Technology Profile</a>
-                <!-- <a href="{% url 'comprehensive_profile' company_profile.company_id %}" data-info="{% for product in Products %}{{ product.product_name }}<br>{% endfor %}">Product List</a> -->
+                
                 <a href="{% url 'comprehensive_profile' company_profile.company_id %}" data-info="CEO: {{ company_profile.ceo }}<br>CFO: {{ company_profile.cfo }}<br>CMO: {{ company_profile.cmo }}<br>VP: {{ company_profile.vp }}">Organization chart</a>
-            </div>
-            <a class="dropdown-btn">CORPORATE FINANCE</a>
+            </div> -->
+
+
             <div class="dropdown-container">
-                <a href="#" data-info="Planning and Budgeting details...">Planning and Budgeting</a>
-                <a href="{% url 'financial_statement' company_profile.company_id %}" data-info="Financial Statement details...">Financial Statement</a>
+                <a href="{% url 'basic_information' company_profile.company_id %}" data-info="Basic Info">Basic Information</a>
+                <a href="{% url 'business_plan' company_profile.company_id %}" data-info="Business Plan">Business Plan</a>
+                <a href="#" data-info="Pitch & Product">Pitch & Product </a>
+                <a href="#" data-info="Organization">Organization</a>
+                <a href="#" data-info="Cap Table">Cap Table</a>   
+            </div>
+            <a class="dropdown-btn">Corporate Finance</a>
+            <div class="dropdown-container">
+                <a href="{% url 'financial_statement' company_profile.company_id %}" data-info="Planning and Budgeting details...">Planning and Budgeting</a>
+                <a href="#" data-info="Forecasting details...">Industry Benchmarking</a>
                 <a href="#" data-info="Forecasting details...">Forecasting</a>
-                <a href="#" data-info="Performance Management details...">Performance Management</a>
-                <a href="#" data-info="Business Modelling and Valuation details...">Business Modelling and Valuation</a>
-                <a href="#" data-info="Predictive and Prespective Analysis details...">Predictive and Prespective Analysis</a>
-                <a href="#" data-info="Decision Making Support details...">Decision Making Support</a>
-                <a href="#" data-info="Dashboards & Reporting details...">Dashboards & Reporting</a>
-                <a href="#" data-info="Industry Benchmarking details...">Industry Benchmarking</a>
+                <a href="#" data-info="Performance Management details...">Business Modeling and Valuation</a>
+                <!-- <a href="{% url 'financial_statement' company_profile.company_id %}" data-info="Financial Statement details...">Financial Statement</a> -->
             </div>
-            <a class="dropdown-btn">DUE DILIGENCE</a>
+            <a class="dropdown-btn">Due Diligence</a>
             <div class="dropdown-container">
-                <a href="#" data-info="Compliance Monitoring details...">Compliance Monitoring</a>
-                <a href="#" data-info="Real Time Monitoring details...">Real Time Monitoring</a>
-                <a href="#" data-info="Document Management details...">Document Management</a>
-                <a href="#" data-info="Risk Assessment details...">Risk Assessment</a>
+                <a href="#" data-info="Compliance Monitoring details...">Document Management</a>
+                <a href="#" data-info="Real Time Monitoring details...">Clearance Monitoring System</a>
+                <a href="#" data-info="Document Management details...">Compliance Monitoring</a>
+                
             </div>
-            <a class="dropdown-btn">FUND RAISING</a>
+            <a class="dropdown-btn">Fund Raising</a>
             <div class="dropdown-container">
-                <a href="#" data-info="Investor Relations details...">Investor Relations</a>
-                <a href="#" data-info="M&A Matching details...">M&A Matching</a>
                 <a href="#" data-info="Investor Matching details...">Investor Matching</a>
+                <a href="#" data-info="M&A Matching details...">M&A Matching</a>
+                <a href="#" data-info="Investor Relation details...">Investor Relation</a>
             </div>
-            <a class="dropdown-btn">INVESTOR TOOL</a>
+            <a class="dropdown-btn">Investor Tool</a>
             <div class="dropdown-container">
-                <a href="#" data-info="Startup Exchange details...">Startup Exchange</a>
                 <a href="#" data-info="Performance Benchmarking details...">Performance Benchmarking</a>
-                <a href="#" data-info="Startup Matching details...">Startup Matching</a>
-                <a href="#" data-info="Exclusive Insights Preview details...">Exclusive Insights Preview</a>
+                <a href="#" data-info="Startup Ranking details...">Startup Ranking</a>
+                <a href="#" data-info="Startup Listing details...">Startup Listing</a>
                 <a href="#" data-info="Syndication & Strategic Partnership details...">Syndication & Strategic Partnership</a>
-                <a href="#" data-info="Investor Dashboards details...">Investor Dashboards</a>
+                
             </div>
         </div>
     {% endif %}
@@ -238,5 +241,8 @@
             }, 100); // Short delay to allow for moving back to the submenu item
         });
     });
+
+    var selectedCompanyName = localStorage.getItem('selectedCompanyName');
+    document.getElementById('myCompanyName').innerHTML=selectedCompanyName.toUpperCase()
 </script>
 {% endblock content %}
