--- a/templates/admin/financial_statement.html
+++ b/templates/admin/financial_statement.html
@@ -1,3 +1,4 @@
+
 {% block content %}
 <style>
     /* styles.css */
@@ -16,6 +17,34 @@
         font-family: 'Arial', sans-serif;
         background-color: #f0f2f5;
         color: #333;
+    }
+
+    /* Add scrollbars to the table container */
+    .table-responsive {
+        max-height: 500px;
+        /* Adjust as necessary */
+        overflow-y: auto;
+        overflow-x: auto;
+    }
+    table{
+        max-width: fit-content;
+    }
+    /* Ensure table header remains fixed */
+    .table-responsive table thead th {
+        position: sticky;
+        top: -2;
+        background-color: #f0f2f5;
+        /* Same as body background to blend in */
+        z-index: 1;
+    }
+
+    .hidden {
+        display: none;
+    }
+    .extra-polate-btn{
+        position: absolute;
+        top:450px;
+        right:450px;
     }
 </style>
 {% include './company_profile.html' %}
@@ -43,91 +72,93 @@
 
             <div id="home" class="tab-pane fade show active">
                 {% if homogenous_products or heterogenous_products %}
-                        <div class="table-responsive">
-                            <table id="revenueTable" class="table table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th></th>
-                                        <th>Y1</th>
-                                        <th>Y2</th>
-                                        <th>Y3</th>
-                                        <th>Y4</th>
-                                        <th>Y5</th>
-                                        <th>Y6</th>
-                                        <th>Y7</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Particulars</td>
-                                        <td>Amount</td>
-                                        <td>Amount</td>
-                                        <td>Amount</td>
-                                        <td>Amount</td>
-                                        <td>Amount</td>
-                                        <td>Amount</td>
-                                        <td>Amount</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Homogeneous</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Revenue Vertical</td>
-                                    </tr>
-                                    {% for product in homogenous_products %}
-                                    <tr>
-                                        <td>Product Name</td>
-                                        <td><input type="text" class="form-control" value="{{product.product_name}}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Product Cost</td>
-                                        <td><input type="number" class="form-control"
-                                                value="{{product.selling_price_per_unit}}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>No of Products</td>
-                                        <td><input type="number" class="form-control" value="{{product.units_sold}}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Revenue from Product</td>
-                                        <td>{{product.revenue_from_product}}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Expected Growth</td>
-                                        <td><input type="number" class="form-control" value="{{product.expected_growth_rate}}">
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
+                <div class="table-responsive">
+                    <table id="revenueTable" class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Y1</th>
+                                <th class="hidden">Y2</th>
+                                <th class="hidden">Y3</th>
+                                <th class="hidden">Y4</th>
+                                <th class="hidden">Y5</th>
+                                <th class="hidden">Y6</th>
+                                <th class="hidden">Y7</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Particulars</td>
+                                <td>Amount</td>
+                                <td class="hidden">Amount</td>
+                                <td class="hidden">Amount</td>
+                                <td class="hidden">Amount</td>
+                                <td class="hidden">Amount</td>
+                                <td class="hidden">Amount</td>
+                                <td class="hidden">Amount</td>
+                            </tr>
+                            <tr>
+                                <td><b>Homogeneous</b></td>
+                            </tr>
+                            <tr>
+                                <td>Revenue Vertical</td>
+                            </tr>
+                            {% for product in homogenous_products %}
+                            <tr>
+                                <td>Product Name</td>
+                                <td><input type="text" class="form-control" value="{{product.product_name}}"></td>
+                                
+                            </tr>
+                            <tr>
+                                <td>Product Cost</td>
+                                <td><input type="number" class="form-control"
+                                        value="{{product.selling_price_per_unit}}"></td>
+                            </tr>
+                            <tr>
+                                <td>No of Products</td>
+                                <td><input type="number" class="form-control" value="{{product.units_sold}}"></td>
+                            </tr>
+                            <tr>
+                                <td>Revenue from Product</td>
+                                <td>{{product.revenue_from_product}}</td>
+                            </tr>
+                            <tr>
+                                <td>Expected Growth</td>
+                                <td><input type="number" class="form-control" value="{{product.expected_growth_rate}}">
+                                </td>
+                            </tr>
+                            {% endfor %}
 
-                                    {% for product in heterogenous_products %}
-                                    <tr>
-                                        <td>Heterogeneous</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Product Name</td>
-                                        <td><input type="text" class="form-control" value="{{product.product_name}}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Expected Revenue</td>
-                                        <td><input type="number" class="form-control" value="{{product.expected_revenue}}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Expected Growth</td>
-                                        <td><input type="number" class="form-control" value="{{product.expected_growth_rate}}">
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                    <!-- Placeholder rows for Revenue Verticals -->
-                                    <tr id="totalRevenueRow">
-                                        <td>Total Revenue</td>
-                                        <td class="total-revenue" colspan="7">0</td>
-                                    </tr>
+                            {% for product in heterogenous_products %}
+                            <tr>
+                                <td><b>Heterogeneous</b></td>
+                            </tr>
+                            <tr>
+                                <td>Product Name</td>
+                                <td><input type="text" class="form-control" value="{{product.product_name}}"></td>
+                            </tr>
+                            <tr>
+                                <td>Expected Revenue</td>
+                                <td><input type="number" class="form-control" value="{{product.expected_revenue}}"></td>
+                            </tr>
+                            <tr>
+                                <td>Expected Growth</td>
+                                <td><input type="number" class="form-control" value="{{product.expected_growth_rate}}">
+                                </td>
+                            </tr>
+                            {% endfor %}
+                            <!-- Placeholder rows for Revenue Verticals -->
+                            <tr id="totalRevenueRow">
+                                <td>Total Revenue</td>
+                                <td class="total-revenue" colspan="7">0</td>
+                            </tr>
 
 
-                                </tbody>
-                            </table>
-                        </div>
+                        </tbody>
+                    </table>
+                </div>
 
+                <button id="extraPolateBtn" class="btn btn-primary mb-3 extra-polate-btn" onclick="extraPolate()">Extra Polate</button>
                 {% else%}
                 <h4 class="mb-4 text-center mt-5">Please Add Revenue Verticals</h4>
                 <div class="text-center mt-5 mb-3">
@@ -154,5 +185,15 @@
 
 <!-- Bootstrap JS and custom JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function extraPolate(){
+        const columns = document.querySelectorAll(".hidden");
+        extraPolateButton = document.getElementById("extraPolateBtn")
+        columns.forEach(column => column.style.display = "table-cell");
+        extraPolateButton.style.display = "none"
+    }
+</script>
+
+
 
 {% endblock content %}
