--- a/templates/admin/company_profile.html
+++ b/templates/admin/company_profile.html
@@ -140,7 +140,7 @@
                 <a href="{% url 'business_plan' company_profile.company_id %}" data-info="Business Plan">Business Plan</a>
                 <a href="#" data-info="Pitch & Product">Pitch & Product </a>
                 <a href="#" data-info="Organization">Organization</a>
-                <a href="#" data-info="Cap Table">Cap Table</a>   
+                <a href="{% url 'cap_table' company_profile.company_id %}" data-info="Cap Table">Cap Table</a>   
             </div>
             <a class="dropdown-btn">Corporate Finance</a>
             <div class="dropdown-container">
