--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -76,9 +76,9 @@
                         <label for="company_type"><strong>Are you a:</strong></label>
                         <select class="form-control" name="company_type" id="company_type" onchange="showCompanyTypeDetails()" required>
                             <option value="" disabled selected>Select your option</option>
-                            <option value="Startup">Startup</option>
-                            <option value="Investor">Investor</option>
-                            <option value="CA_firm"> Enablers</option>
+                            <option value="startup">Startup</option>
+                            <option value="investor">Investor</option>
+                            <option value="enabler"> Enablers</option>
                         </select>
                     </div>
 
